--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-ya-runtime-sdk = { version = "0.1", features = ["macros"] }
+ya-runtime-sdk = { path = "../ya-runtime-sdk/ya-runtime-sdk", version = "0.1", features = ["macros"] }
 
 anyhow = "1.0"
 futures = "0.3"
